     at least for devices currently in the field. A toggle was added to set
     the old behavior (if some devices do need it), while a fix is applied
     by default: `powercom_sdcmd_byte_order_fallback`. [PR #2480]
   * `cps-hid` subdriver now supports more variables, as available on e.g.
     CP1350EPFCLCD model, including temperature. [PRs #2540, #2711]
   * USB parameters (per `usb_communication_subdriver_t`) are now set back to
     their default values during enumeration after probing each subdriver.
     Having an unrelated device connected with a VID:PID matching the
     `arduino-hid` subdriver prevented use of an actual `usb-hid` device due to
     changes made to this struct during probe. [#2611]

 - USB-capable drivers generally:
   * ...could earlier log `(nut_)libusb_get_string: Success` due to either
     reading an empty string or getting a success code `0` from libusb.
     This difference should now be better logged, and not into syslog. [#2399]
   * ...now can benefit from a new `nut_usb_get_string()` method which can do a
     fallback `en_US` query for devices which report a broken "langid" language
     identifier value. This notably manifested in inability to query the device
     Manufacturer, Model and Serial Number values with some buggy device firmware
     or hardware. [PR #2604, issues #1925, #414]
     * Currently this was tested to fix certain device discovery with the
       `usbhid-ups` driver; but should also apply out of the box to same
       discovery logic in `blazer_usb`, `nutdrv_qx`, `riello_usb` and
       `tripplite_usb` drivers.
     * Also applied to `nut-scanner` and `libnutscan`. [issue #2615]
     * More work may be needed for other USB-capable drivers (`richcomm_usb`,
       `nutdrv_atcl_usb`) and for general code to collect string readings and
       other data points, and to configure the fallback locale or choose one
       if several are served by the device. [issues #2613, #2614, #2615]